--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@okta/oidc-middleware": "^4.0.3",
+    "@okta/okta-sdk-nodejs": "^4.4.0",
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "http": "^0.0.1-security",
     "http-errors": "~1.6.3",
     "mongodb": "^3.6.4",
