--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "nodemon": "^2.0.7",
     "pug": "2.0.0-beta11",
     "socket.io": "^3.1.1"
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0"
   }
 }
