--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
     "express": "^4.16.4",
     "express-openid-connect": "^2.2.1",
     "express-session": "^1.17.1",
