--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@okta/oidc-middleware": "^4.0.3",
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
