--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "socket.io": "^3.1.1"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "jquery": "^3.6.0"
   }
 }
