--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
+    "jquery": "^3.6.0",
     "ejs": "^3.1.6",
     "express": "^4.16.4",
     "express-openid-connect": "^2.2.1",
@@ -26,7 +27,6 @@
     "socket.io": "^3.1.1"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
-    "jquery": "^3.6.0"
+    "dotenv": "^8.2.0"
   }
 }
