--- a/package.json
+++ b/package.json
@@ -8,17 +8,19 @@
   "dependencies": {
     "@okta/oidc-middleware": "^4.0.3",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.6.0",
+    "bootstrap-select": "file:bootstrap-select",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
-    "jquery": "^3.6.0",
     "ejs": "^3.1.6",
     "express": "^4.16.4",
     "express-openid-connect": "^2.2.1",
     "express-session": "^1.17.1",
     "http": "^0.0.1-security",
     "http-errors": "~1.6.3",
+    "jquery": "^3.6.0",
     "mongodb": "^3.6.4",
     "mongoose": "^5.11.16",
     "morgan": "~1.9.1",
