--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "morgan": "~1.9.1",
     "nodemon": "^2.0.7",
     "pug": "^2.0.4",
-    "socket.io": "^3.1.1"
+    "socket.io": "^3.1.1",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0"
