navbar icon updates

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@okta/oidc-middleware": "^4.0.3",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.4.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
