--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongodb": "^3.6.4",
     "mongoose": "^5.11.16",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.7",
     "pug": "^2.0.4",
     "socket.io": "^3.1.1"
