--- a/.gitignore
+++ b/.gitignore
@@ -103,6 +103,8 @@ dist
 # TernJS port file
 .tern-port
 
-# .idea/workspace.xml
+.idea/workspace.xml
 
  .env
+
+ profileImages/1622361501904thatoldschool.jpg
