--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.18.3",
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.4.1",
+    "bootstrap-select": "^1.13.18",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -28,6 +29,7 @@
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
     "pug": "^2.0.4",
+    "select": "^1.1.2",
     "socket.io": "^3.1.1"
   },
   "devDependencies": {
