--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "nodemon": "^2.0.7",
     "pug": "^2.0.4",
     "select": "^1.1.2",
-    "socket.io": "^3.1.1"
+    "socket.io": "^3.1.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "dotenv": "^8.2.0"
